# NF16_TP4

./: CMakeLists.txt  builder.ui  graphicalInterface.c  graphicalInterface.h  main.c  main.h  tp4.c  tp4.h
